# Page-Analyzer

./: .gitignore  Makefile  README.md  build.sh  database.sql  pyproject.toml  setup.cfg
.github/workflows/: pyci.yml
page_analyzer/: __init__.py  app.py  celery_config.py  database.py  db.py  helpers.py  html.py  html_parser.py  tasks.py  url_validator.py
page_analyzer/templates/: 404.html  500.html  index.html  layout.html  show_all_urls.html  show_url.html  url.html  urls.html
tests/: test_page_analyzer.py
tests/fixtures/: database.sql
